<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain"
    >
    <item
        android:id="@+id/appSettings"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:visible="true"
        android:textColor="@color/colorDisabled"
        android:title="@string/app_settings">
    </item>
    <item
        android:id="@+id/appLogout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"
        android:title="@string/app_log_out">
    </item>
    <item
        android:id="@+id/appSearch"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/app_search">
    </item>
    <item
        android:id="@+id/appCheckUpdates"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/app_check_update">
    </item>
    <item
        android:id="@+id/appFeedback"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/app_feedback">
    </item>
    <item
        android:id="@+id/changePassword"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/fireground.org_change_password">
    </item>
    <item
        android:id="@+id/appAbout"
        android:orderInCategory="600"
        app:showAsAction="never"
        android:title="@string/app_about">
    </item>
</menu>
